tests/errors/maskl_negative.f90
program example
   print*, maskl(-24)
end
